# whatsapp_mcp

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  template.py
.github/workflows/: cd.yml  ci.yml
docs/: project_memory.md
examples/: adk_agent.py  mcp_bridge.py
src/whatsapp_mcp/: main.py  mcp_server.py  settings.py
src/whatsapp_mcp/whatsapp/: client.py
tests/: test_basic_smoke.py
whatsapp-bridge/: Dockerfile  go.mod  go.sum  main.go
